# grappa

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
cmake/: cuda.cmake  numa.cmake  openmp.cmake  pybind11.cmake  python.cmake  test.cmake
csrc/base/: chunk.h  config.h  error.h  galloc.h  gchunk.h  gerror.h  glauncher.cuh  grandom.cuh  gutil.cuh  log.cc  log.h  mmap_file.h  random.h  util.h
csrc/graph/: build.cc  build.h  graph.cc  graph.h  sampling_g.cu  sampling_g.cuh  sampling_h.cc  sampling_h.h
csrc/python/: py_dist_chunking.cc  py_dist_chunking.h  py_graph.cc  py_graph.h  py_seq_chunking.cc  py_seq_chunking.h  py_test.cc  py_test.h  py_xborder.cc  py_xborder.h  pybind11.cc  pyutil.h
csrc/test/: test_build_graph.cc  test_cuda.cu  test_random.cc  test_reduce.cc  test_sampling_g.cu  test_sampling_h.cc
experiments/baselines/bns_gcn/: 0001-BNS-GCN-use-Docker_cu118.patch  0002-BNS_GCN-helper-utils.py-add-ogbn-arxiv.patch  0003-BNS-GCN-add-wall-time.patch  setup_cu118.sh
experiments/baselines/cluster_gcn/: 2xh100.sh  checkpoint  dbg_run.txt  eval.py  example_run_ppi.sh  layer_2_hidden_128_lr_.003.train.txt  layers.py  models.py  ogbpr.py  partition_utils.py  setup.md  slurm.sh  test.py  train.origin.py  train.py  utils.py
experiments/baselines/dgl/: comm_volume.py  hosts_docker_16  hosts_docker_8  hosts_docker_b_4  launch_ea48ce7.py  run.py  run_metis_4.py  run_metis_8.py  run_metis_exp.sh  run_random_4.py  run_random_8.py  run_random_exp.sh
experiments/baselines/dgl_dsg/: launch_e556dc5.py  run.py
experiments/baselines/mgg/: setup_cu118.sh
experiments/baselines/neutron_star/: 0001-fix-compiling-error.patch  0002-comm-fix-compiling-error.patch  0003-data-requirements.txt-ogb-1.3.6.patch  0004-main.cpp-accounting-train-time.patch  0005-GAT-GCN-run-inference-at-last-epoch.patch  0006-data-generate-nts-roc-dataset.patch  0007-toolkits-main.cpp-clarify-exec_time.patch  setup_cu118.sh
experiments/baselines/roc/: 0001-ROC-clarify-exec-time.patch  setup_cu118.sh  (+1 more)
experiments/grappa/: convert.sh  create_env_16n.t10n  create_swarm_16n.py  create_swarm_cluster.py  create_swarm_cluster_env.t10n  dataset_to_t10n.py  help.py  hosts  hosts_16n  hosts_8h100  hosts_docker  hosts_h100  p.sh  partition.sh.template  per_node.sh  per_node_partition.sh  run.sh  run_dbg.sh  run_partition_size.sh  slurm_per_node_a100.sh  slurm_per_node_a100_dbg.sh  slurm_per_node_h100.sh  slurm_test.sh  slurm_test_2.sh  t10nrun.py  t10nrun_dbg.py  t10nrun_partition_size.py  train.sh.template  train.sh.template.dbg  train.sh.template.fullg  volta1  volta2
scripts/: barrier.sh  build_dgl.sh  docker_start.sh  format.sh  prep_cu118.sh  t10n_install.sh  t10n_install_cpu.sh  t10n_kill_job.sh  t10n_wheel.sh
t10n/: __init__.py  cl.py  dataloader.py  dataloader_gpu.py  device_allocator.py  grad.py  infer.py  sampler.py  util.py  xborder.py  xbsampler.py
t10n/dataset/: __init__.py  chunk_dist.py  chunk_seq.py  dgl_to_t10n.py  io_dist.py  meta.py
t10n/dgl_dsg/: __init__.py  compliant.py  sampler.py
test/: numa_bench.c  test_c_graph.py  test_c_xborder.py  test_count.py  test_igb.py  test_sampler.py  test_t10n_device_allocator.py  test_xborder.py
(+151 files in other folders)
